--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    sourceSets["main"].java.srcDir("src/main/kotlin")
     buildTypes {
         release {
             minifyEnabled false
