--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,11 @@
     package="com.litekite.systemui"
     android:sharedUserId="android.uid.systemui">
 
+    <!-- Using OpenGL ES 2.0 -->
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
     <!-- SysUI must be the one to define this permission; its name is
          referenced by the core OS. -->
     <permission
@@ -362,15 +367,6 @@
         android:name="android.permission.WATCH_APPOPS"
         tools:ignore="ProtectedPermissions" />
 
-    <!-- to read and change hvac values in a car -->
-    <uses-permission android:name="android.car.permission.CONTROL_CAR_CLIMATE" />
-
-    <!-- to be able to detect the driving state in a car-->
-    <uses-permission android:name="android.car.permission.CAR_DRIVING_STATE" />
-
-    <!-- Permission necessary to change car audio volume through CarAudioManager -->
-    <uses-permission android:name="android.car.permission.CAR_CONTROL_AUDIO_VOLUME" />
-
     <!-- Permission to control Android Debug Bridge (ADB) -->
     <uses-permission android:name="android.permission.MANAGE_DEBUGGING" />
 
@@ -380,6 +376,16 @@
 
     <!-- Permission to change the display color -->
     <uses-permission android:name="android.permission.CONTROL_DISPLAY_COLOR_TRANSFORMS" />
+
+    <!-- Automotive Permissions -->
+    <!-- to read and change hvac values in a car -->
+    <uses-permission android:name="android.car.permission.CONTROL_CAR_CLIMATE" />
+
+    <!-- to be able to detect the driving state in a car-->
+    <uses-permission android:name="android.car.permission.CAR_DRIVING_STATE" />
+
+    <!-- Permission necessary to change car audio volume through CarAudioManager -->
+    <uses-permission android:name="android.car.permission.CAR_CONTROL_AUDIO_VOLUME" />
 
     <!-- This permission is required to monitor car power state. -->
     <uses-permission android:name="android.car.permission.CAR_POWER" />
