Enabled and updated Proguard Rules

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,14 +31,21 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+        vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     sourceSets["main"].java.srcDir("src/main/kotlin")
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    lintOptions {
+        baseline file("lint-baseline.xml")
+        warningsAsErrors true
+        enable "Interoperability"
     }
     compileOptions {
         sourceCompatibility = 1.8
