--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,11 @@
     package="com.litekite.systemui"
     android:sharedUserId="android.uid.systemui">
 
+    <!-- FEATURE_AUTOMOTIVE -->
+    <uses-feature
+        android:name="android.hardware.type.automotive"
+        android:required="true"/>
+
     <!-- Using OpenGL ES 2.0 -->
     <uses-feature
         android:glEsVersion="0x00020000"
