Updated SystemUI Launcher Icon and updated build

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -426,7 +426,7 @@
         android:label="@string/app_name"
         android:persistent="true"
         android:process="com.litekite.systemui"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/Theme.SystemUI"
         tools:ignore="GoogleAppIndexingWarning">
