--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@
 
 buildscript {
     ext.kotlin_version = '1.3.72'
+    ext.hilt_version = '2.28-alpha'
     repositories {
         google()
         jcenter()
@@ -25,6 +26,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
