--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
    See the License for the specific language governing permissions and
    limitations under the License.
 -->
+<!--suppress AndroidUnknownAttribute -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     coreApp="true"
@@ -23,7 +24,7 @@
     <!-- FEATURE_AUTOMOTIVE -->
     <uses-feature
         android:name="android.hardware.type.automotive"
-        android:required="true"/>
+        android:required="true" />
 
     <!-- Using OpenGL ES 2.0 -->
     <uses-feature
@@ -425,8 +426,7 @@
         android:process="com.litekite.systemui"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SystemUI"
-        tools:ignore="GoogleAppIndexingWarning">
+        android:theme="@style/Theme.SystemUI">
 
         <service android:name=".service.SystemUIService" />
 
