--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,7 +100,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation 'com.google.android.material:material:1.2.0'
+    implementation 'com.google.android.material:material:1.2.1'
 
     // Widgets library
     implementation 'com.github.LiteKite:Android-Widgets:0.0.2'
@@ -147,4 +147,37 @@ dependencies {
 
     // Espresso dependencies
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+}
+
+task deploy(dependsOn: "assembleRelease") {
+    doLast {
+        def appName = "CarSystemUI"
+
+        def releaseApkDir = "$projectDir/build/outputs/apk/release/"
+
+        def targetDir = "/system/product/priv-app/${appName}"
+
+        exec {
+            commandLine "adb", "root"
+        }
+
+        exec {
+            commandLine "adb", "remount"
+        }
+
+        file("${releaseApkDir}app-release.apk").renameTo("${releaseApkDir}${appName}.apk")
+
+        if (!file("${releaseApkDir}${appName}.apk").exists()) {
+            println("Renamed target apk not found!...")
+            return
+        }
+
+        exec {
+            commandLine "adb", "push", "${releaseApkDir}${appName}.apk", targetDir
+        }
+
+        exec {
+            commandLine "adb", "reboot"
+        }
+    }
 }
