--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,7 +94,7 @@ hilt {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'], exclude: [])
     implementation fileTree(dir: 'system_libs', include: ['*.aar', '*.jar'], exclude: [])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
     implementation 'androidx.core:core-ktx:1.3.1'
@@ -105,17 +105,29 @@ dependencies {
     // Widgets library
     implementation 'com.github.LiteKite:Android-Widgets:0.0.2'
 
-    // ViewModel and LiveData
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    kapt 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
+    // Activity & Fragments KTX
+    implementation "androidx.activity:activity-ktx:1.1.0"
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
+
+    // Lifecycle KTX
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-core-ktx:$lifecycle_version"
+    kapt "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
     // Room
     implementation 'androidx.room:room-runtime:2.2.5'
+    implementation "androidx.room:room-ktx:2.2.5"
     kapt 'androidx.room:room-compiler:2.2.5'
 
     // Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+    // Hilt for ViewModel
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
 
     // Test helpers for Core library
     androidTestImplementation 'androidx.test:core-ktx:1.3.0'
