--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@
 buildscript {
     ext.kotlin_version = '1.4.10'
     ext.hilt_version = '2.28.3-alpha'
+    ext.lifecycle_version = "2.2.0"
     repositories {
         google()
         jcenter()
