--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,11 +99,11 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.android.material:material:1.2.1'
 
     // Widgets library
-    implementation 'com.github.LiteKite:Android-Widgets:0.0.3'
+    implementation 'com.github.LiteKite:Android-Widgets:0.0.5'
 
     // Activity & Fragments KTX
     implementation "androidx.activity:activity-ktx:1.1.0"
@@ -163,6 +163,10 @@ dependencies {
 
 task deploy(dependsOn: [clean, assemble]) {
 
+    group = 'install'
+
+    description = 'Cleans, assembles and deploys apk into target'
+
     assemble.mustRunAfter clean
 
     doLast {
@@ -195,4 +199,5 @@ task deploy(dependsOn: [clean, assemble]) {
             commandLine "adb", "reboot"
         }
     }
+
 }
