--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+        renderscriptTargetApi 30
+        renderscriptSupportModeEnabled true
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
