--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
     defaultConfig {
         applicationId "com.litekite.systemui"
         minSdkVersion 28
+        //noinspection OldTargetApi
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -113,18 +114,17 @@ dependencies {
 
     // Activity & Fragments KTX
     implementation "androidx.activity:activity-ktx:1.2.2"
-    implementation "androidx.fragment:fragment-ktx:1.3.2"
+    implementation "androidx.fragment:fragment-ktx:1.3.3"
 
     // Lifecycle KTX
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     kapt "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
     // Room
-    implementation 'androidx.room:room-runtime:2.2.6'
-    implementation "androidx.room:room-ktx:2.2.6"
-    kapt 'androidx.room:room-compiler:2.2.6'
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     // Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
@@ -133,11 +133,8 @@ dependencies {
     // Test helpers for Core library
     androidTestImplementation 'androidx.test:core-ktx:1.3.0'
 
-    // Test helpers for LiveData
-    testImplementation 'androidx.arch.core:core-testing:2.1.0'
-
     // Test helpers for Room
-    testImplementation 'androidx.room:room-testing:2.2.6'
+    testImplementation "androidx.room:room-testing:$room_version"
 
     // Hilt - Instrumentation test helpers
     androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
