--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = "1.4.32"
-    ext.hilt_version = "2.34-beta"
+    ext.kotlin_version = "1.5.0"
+    ext.hilt_version = "2.35.1"
+    ext.room_version = "2.3.0"
     ext.lifecycle_version = "2.3.1"
     repositories {
         google()
@@ -26,7 +27,7 @@ buildscript {
         maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath 'com.android.tools.build:gradle:4.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         // NOTE: Do not place your application dependencies here; they belong
